Closed Bug 1740747 Opened 3 years ago Closed 3 years ago

Missing unlock in gfxFT2FontBase::InitMetrics()

Categories

(Core :: Graphics: Text, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

After
FT_Face face = LockFTFace();

if (MOZ_UNLIKELY(!face)) {
...
we return without out unlocking (UnlockFTFace()).

This could cause a deadlock if this were to happen, I presume. (I imagine this is hard to hit)

Assignee: nobody → rjesup
Status: NEW → ASSIGNED
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/6bb5bef73e36
Add missing UnlockFTFace() for unlikely case of font removed during init r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: