Bug 1740747: Add missing UnlockFTFace() for unlikely case of font removed during init r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D130992